adding front&back

--- a/nestjs-solidity-compiler/package.json
+++ b/nestjs-solidity-compiler/package.json
@@ -25,11 +25,12 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@openzeppelin/contracts": "^4.4.2",
-    "@openzeppelin/contracts-upgradeable": "^4.4.2",
+    "@openzeppelin/contracts-upgradeable": "^4.5.0",
     "hardhat": "^2.8.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "stacktrace-parser": "^0.1.10",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
