--- a/front/packages/ui/package.json
+++ b/front/packages/ui/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@pollum-io/pegasys-protocol": "^0.0.14",
     "axios": "^0.25.0",
     "ethers": "^5.5.4",
     "file-saver": "^2.0.5",
@@ -44,6 +45,7 @@
     "polished": "^4.1.4",
     "sirv-cli": "^2.0.0",
     "styled-components": "^5.3.3",
+    "svelte-loading-spinners": "^0.1.7",
     "tippy.js": "^6.3.1",
     "uuid": "^8.3.2"
   }
